# dmcc

./: .editorconfig  .gitignore  .mailmap  .travis.yml  CHANGELOG.md  LICENSE  README  README.md  README.org  avaya-aes.cabal  build.sh  csta.cabal  dmcc.cabal  package.yaml  stack-previous.yaml  stack.yaml
.github/workflows/: ci.yaml
csta-test/: Test.hs
csta-ws/: Main.hs  example.cfg
dmcc-ws/: Main.hs  example.cfg
examples/: Test.hs
src/: CSTA.hs  DMCC.hs
src/Avaya/: Actions.hs  DeviceMonitoring.hs  MessageLoop.hs  Messages.hs
src/Avaya/Messages/: Raw.hs  Request.hs  Response.hs
src/CSTA/: Actions.hs  Agent.hs  Agent.hs-boot  Session.hs  Session.hs-boot  Types.hs
src/CSTA/XML/: Raw.hs  Request.hs  Response.hs
src/DMCC/: Agent.hs  Agent.hs-boot  Prelude.hs  Session.hs  Session.hs-boot  Types.hs  Util.hs  WebHook.hs
src/DMCC/XML/: Raw.hs  Request.hs  Response.hs
src/Network/: Avaya.hs
src/Network/Avaya/: Action.hs  Internal.hs  Messages.hs  Parse.hs  Types.hs
test/: Test.hs
tools/xsd2hs/: xsd2hs.cabal  xsd2hs.hs
xsd/: list
