Name:                avaya-aes
Version:             0.0.1
Synopsis:
Homepage:            https://github.com/f-me/avaya-aes
License:             BSD3
License-file:        LICENSE
Author:              Tim
Maintainer:          timofey@formalmethods.ru
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.6
Extra-source-files:  README examples/Test.hs

Library
  Hs-source-dirs: src
  Exposed-modules:
    Network.Avaya
    Network.Avaya.Action

  Other-modules:
    Network.Avaya.Messages
    Network.Avaya.Parse
    Network.Avaya.Internal

  ghc-options: -Wall -fno-warn-unused-do-bind

  Build-depends:
    base                 == 4.*,
    binary               == 0.5.*,
    bytestring           == 0.9.*,
    bytestring-lexing    == 0.4.*,
    comonad-transformers == 2.1.1,
    data-lens-template   >= 2.1 && < 2.2,
    data-lens            >= 2.10 && < 2.11,
    mtl                  == 2.0.*,
    network              == 2.3.*,
    stm                  == 2.3.*,
    text                 == 0.11.*,
    xml-conduit          == 0.7.*,
    xml-hamlet           == 0.3.*

source-repository head
  type:     git
  location: git://github.com/f-me/avaya-aes.git

