Name:                avaya-aes
Version:             0.0.2
Synopsis:
Homepage:            https://github.com/f-me/avaya-aes
License:             BSD3
License-file:        LICENSE
Author:              Max Taldykin, Timofey Cherganov
Maintainer:          max@formalmethods.ru
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8
Extra-source-files:  README


Executable avaya-test
  Hs-source-dirs: test,src
  Main-is: Test.hs

  ghc-options: -Wall -fno-warn-unused-do-bind

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base                 == 4.*,
    binary               == 0.5.*,
    bytestring           == 0.9.*,
    containers           >= 0.4.2,
    mtl                  == 2.0.*,
    network              == 2.3.*,
    stm                  == 2.3.*,
    text                 == 0.11.*,
    xml-conduit          == 0.7.*,
    xml-hamlet           == 0.3.*


Library
  Hs-source-dirs: src
  Exposed-modules:
    Avaya.DeviceMonitoring
    Avaya.MessageLoop
    Avaya.Messages.Request
    Avaya.Messages.Response

  Other-modules:
    Avaya.Messages.Raw

  ghc-options: -Wall -fno-warn-unused-do-bind

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base                 == 4.*,
    binary               == 0.5.*,
    bytestring           == 0.9.*,
    containers           >= 0.4.2,
    mtl                  == 2.0.*,
    network              == 2.3.*,
    stm                  == 2.3.*,
    text                 == 0.11.*,
    xml-conduit          == 0.7.*,
    xml-hamlet           == 0.3.*

source-repository head
  type:     git
  location: git://github.com/f-me/avaya-aes.git

