Name:                avaya-aes
Version:             0.0.5
Synopsis:
Homepage:            https://github.com/f-me/avaya-aes
License:             BSD3
License-file:        LICENSE
Author:              Max Taldykin, Timofey Cherganov
Maintainer:          max@formalmethods.ru
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8
Extra-source-files:  README


Executable avaya-test
  Hs-source-dirs: test,src
  Main-is: Test.hs

  ghc-options: -Wall -fno-warn-unused-do-bind

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base                 == 4.*,
    binary               == 0.5.*,
    bytestring           >= 0.9.1 && < 0.11,
    containers           == 0.5.*,
    mtl                  == 2.1.*,
    network              == 2.3.*,
    stm                  == 2.4.*,
    text                 == 0.11.*,
    xml-conduit          == 1.0.*,
    xml-hamlet           == 0.4.*


Library
  Hs-source-dirs: src
  Exposed-modules:
    Avaya.Actions
    Avaya.DeviceMonitoring
    Avaya.MessageLoop
    Avaya.Messages.Request
    Avaya.Messages.Response

  Other-modules:
    Avaya.Messages.Raw

  ghc-options: -Wall -fno-warn-unused-do-bind

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base                 == 4.*,
    binary               == 0.5.*,
    bytestring           >= 0.9.1 && < 0.11,
    containers           == 0.5.*,
    mtl                  == 2.1.*,
    network              == 2.3.*,
    stm                  == 2.4.*,
    text                 == 0.11.*,
    xml-conduit          == 1.0.*,
    xml-hamlet           == 0.4.*

source-repository head
  type:     git
  location: git://github.com/f-me/avaya-aes.git

