Name:                dmcc
Version:             0.2
Synopsis:            AVAYA DMCC XML API implementation and WebSockets server

Description:         Partial implementation of CSTA Phase III XML Protocol
                     (ECMA-323) with AVAYA (DMCC 6.3) extensions.

Homepage:            https://github.com/f-me/dmcc
License:             BSD3
License-file:        LICENSE
Author:              Max Taldykin, Timofey Cherganov, Dmitry Dzhus
Maintainer:          max@formalmethods.ru
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8
Extra-source-files:  README.org, dmcc-ws/example.cfg

source-repository head
  type:     git
  location: git://github.com/f-me/dmcc.git

Executable dmcc-ws
  Hs-source-dirs: dmcc-ws
  Main-is: Main.hs

  ghc-options: -Wall -fno-warn-unused-do-bind -threaded

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base                 == 4.*,
    aeson                == 0.8.*,
    bytestring           >= 0.9.1 && < 0.11,
    configurator         >= 0.2 && < 0.4,
    containers           == 0.5.*,
    dmcc,
    hsyslog              >= 1.4 && < 2.1,
    random               == 1.1.*,
    stm                  == 2.4.*,
    text                 >= 0.11 && < 1.3,
    unix                 >= 2.7 && < 2.9,
    websockets           == 0.9.*

Library
  Hs-source-dirs: src
  Exposed-modules:
    DMCC

  Other-modules:
    DMCC.Agent
    DMCC.Session
    DMCC.Types
    DMCC.XML.Raw
    DMCC.XML.Request
    DMCC.XML.Response

  ghc-options: -Wall -fno-warn-unused-do-bind -threaded

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base                 == 4.*,
    aeson                == 0.8.*,
    binary               >= 0.5 && < 0.8,
    bytestring           >= 0.9.1 && < 0.11,
    case-insensitive     == 1.2.*,
    containers           == 0.5.*,
    HsOpenSSL            == 0.11.*,
    hsyslog              >= 1.4 && < 2.1,
    http-client          >= 0.4 && < 0.5,
    io-streams           == 1.2.*,
    lens                 >= 4.6 && < 4.8,
    mtl                  >= 2.1 && < 2.3,
    network              >= 2.3 && < 2.7,
    openssl-streams      == 1.2.*,
    stm                  == 2.4.*,
    time                 >= 1.4 && < 1.6,
    transformers         >= 0.3 && < 0.5,
    text                 >= 0.11 && < 1.3,
    xml-conduit          >= 1.0 && < 1.3,
    xml-hamlet           == 0.4.*
