Name:                dmcc
Version:             0.6
Synopsis:            AVAYA DMCC XML API implementation and WebSockets server

Description:         Partial implementation of CSTA Phase III XML Protocol
                     (ECMA-323) with AVAYA (DMCC 6.3) extensions.

Homepage:            https://github.com/f-me/dmcc
License:             BSD3
License-file:        LICENSE
Author:              Max Taldykin, Timofey Cherganov, Dmitry Dzhus
Maintainer:          max@formalmethods.ru
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8
Extra-source-files:  README.md, dmcc-ws/example.cfg

source-repository head
  type:     git
  location: git://github.com/f-me/dmcc.git

Executable dmcc-ws
  Hs-source-dirs: dmcc-ws
  Main-is: Main.hs

  ghc-options: -Wall -fno-warn-unused-do-bind -threaded

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base,
    aeson,
    bytestring,
    configurator,
    containers,
    dmcc,
    hsyslog,
    random,
    stm,
    text,
    time,
    unix,
    websockets

Library
  Hs-source-dirs: src
  Exposed-modules:
    DMCC
    DMCC.WebHook

  Other-modules:
    DMCC.Agent
    DMCC.Session
    DMCC.Types
    DMCC.Util
    DMCC.XML.Raw
    DMCC.XML.Request
    DMCC.XML.Response
    Paths_dmcc

  ghc-options: -Wall -fno-warn-unused-do-bind -threaded

  Extensions:
    OverloadedStrings,
    RecordWildCards,
    NamedFieldPuns

  Build-depends:
    base,
    aeson,
    binary,
    bytestring,
    case-insensitive,
    containers,
    HsOpenSSL,
    hsyslog,
    http-client,
    io-streams,
    lens,
    mtl,
    network,
    openssl-streams,
    stm,
    time,
    transformers,
    text,
    xml-conduit,
    xml-hamlet
